--- a/website/src/inc/custom.css
+++ b/website/src/inc/custom.css
@@ -31,5 +31,9 @@
 
 .w3-primary, .w3-hover-primary:hover {
     color: #fff !important;
-    background-color: #f44336 !important
+    background-color: #CC1B59;
+}
+
+.nowrap {
+    white-space: nowrap;
 }
