--- a/website/src/inc/sass/sass/css.scss
+++ b/website/src/inc/sass/sass/css.scss
@@ -52,7 +52,7 @@ div.#{$prefix}header-select-section {
     &:after {
       content: '';
       display: block;
-      background: transparent url('data:image/svg+xml;utf8,<svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0L4 4L8 0H0Z" fill="#CC1858"/></svg>') center center no-repeat;
+      background: transparent url('data:image/svg+xml;utf8,<svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0L4 4L8 0H0Z" fill="%23CC1858"/></svg>') center center no-repeat;
       background-size: 17px;
       width: 14px;
       height: 6px;
